# johanyim.github.io

./: .gitignore  CNAME  README.md  banner.md  content.md  deploy.sh  flake.nix  index.html  localhost_2024-07-11_01-54-57.report.html  package-lock.json  package.json  pre-commit  setup  style.css  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
assets/: AbsorberInstance-CTFPZ4pi.js  AbsorbersPlugin-rQfhgV95.js  AnimationOptions-Ceq3X7hW.js  BaseMover-CvT1ikEB.js  Bubbler-DLhQQxjN.js  CanvasUtils-3bUCmUew.js  CanvasUtils-5kKOi5Ya.js  CircleDrawer-B5HJ9PoO.js  CircleDrawer-CijE6z7t.js  Collider-DWEtRfDU.js  ColorUpdater-BMWv1PJD.js  Container-3GlVarig.js  Container-DW7Z2VX4.js  DestroyUpdater-BZRgtaKc.js  Emitters-Be_NNUIs.js  EmittersCircleShapeGenerator-Cz3zZ4Os.js  EmojiDrawer-CizZtxmY.js  LinkInstance-YAVltNtI.js  LinkInstance-xB1ZaxmL.js  Linker-D2Nz51s1.js  LinksPlugin-BfWIZNyI.js  LinksPlugin-JwnbSzXa.js  OpacityUpdater-BKDPIix5.js  OpacityUpdater-BnU_8Zhq.js  OptionsColor-YDRyoCkN.js  OutOfCanvasUpdater-DzHIiI9q.js  OutOfCanvasUpdater-Pwn8FJIr.js  Pusher-B8e8fxQq.js  Pusher-BcuY15Jv.js  Pusher-Dwok05VE.js  Repulser-C9-xmG3R.js  RollUpdater-CcqeFtfZ.js  SizeUpdater-B-muNr23.js  SizeUpdater-BhkMvurc.js  SizeUpdater-CxxABOKA.js  SizeUpdater-DyksTdsx.js  Slower-ChhIobL-.js  StrokeColorUpdater-CoQHlox5.js  TwinkleUpdater-CIqsFxPX.js  WobbleUpdater-CNQUPDXU.js  (+34 more)
backend/: Cargo.toml  build.rs  email.hurl
backend/src/: main.rs
(+114 files in other folders)
